[gd_scene load_steps=2 format=3 uid="uid://cax72ahkg0h6d"]

[ext_resource type="Script" path="res://Character/Habilities/Dash.gd" id="1_wyeyy"]

[node name="Dash" type="Node"]
script = ExtResource("1_wyeyy")

[node name="durationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[connection signal="timeout" from="durationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
